fixed broken css

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,5 @@
+/* Faraz Durrani */
+
 body {
     background-color: rgb(231,147,35);
     font-family: "Times New Roman", Times, serif;
@@ -14,12 +16,28 @@ body {
 #headerdivleftsideimg {
     float: left;
 }
-#headerdivrightsidenavbar {
+#headerdivrightsidenavbar1 {
+    float: right;
+    margin: 10px;
+}
+#headerdivrightsidenavbar2 {
+    float: right;
+    margin: 10px;
+}
+#headerdivrightsidenavbar3 {
+    float: right;
+    margin: 10px;
+}
+#headerdivrightsidenavbar4 {
+    float: right;
+    margin: 10px;
+}
+#headerdivrightsidenavbar5 {
     float: right;
     margin: 10px;
 }
 
-#headerdivrightsidenavbar a {
+#headerdivrightsidenavbar1 a {
     text-decoration: none;
     color: black;
     margin: 10px;
